them order tour

--- a/TourManagement.Business/TourManagement.Business.csproj
+++ b/TourManagement.Business/TourManagement.Business.csproj
@@ -53,15 +53,21 @@
   <ItemGroup>
     <Compile Include="BaseServices\GenericRepository.cs" />
     <Compile Include="BaseServices\IGenericRepository.cs" />
+    <Compile Include="IServices\IBookTourRepository.cs" />
     <Compile Include="IServices\IDestinatioRepository.cs" />
     <Compile Include="IServices\IEmployeeRepository.cs" />
     <Compile Include="IServices\IHotelRepository.cs" />
+    <Compile Include="IServices\IOrderTourDetailRepository.cs" />
+    <Compile Include="IServices\IOrderTourRepository.cs" />
     <Compile Include="IServices\ITourRepository.cs" />
     <Compile Include="IServices\IUserRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\BookTourRepository.cs" />
     <Compile Include="Services\DestinationRepository.cs" />
     <Compile Include="Services\EmployeeRepository.cs" />
     <Compile Include="Services\HotelRepository.cs" />
+    <Compile Include="Services\OrderTourDetailRepository.cs" />
+    <Compile Include="Services\OrderTourRepository.cs" />
     <Compile Include="Services\TourRepository.cs" />
     <Compile Include="Services\UserRepository.cs" />
   </ItemGroup>
