--- a/TourManagement.Presentation/TourManagement.Presentation.csproj
+++ b/TourManagement.Presentation/TourManagement.Presentation.csproj
@@ -357,11 +357,8 @@
     <Content Include="Views\Users\Edit.cshtml" />
     <Content Include="Views\Shared\LoginPatial.cshtml" />
     <Content Include="Views\Home\SearchTour.cshtml" />
-    <Content Include="Views\OrderTours\Create.cshtml" />
-    <Content Include="Views\OrderTours\Delete.cshtml" />
-    <Content Include="Views\OrderTours\Details.cshtml" />
-    <Content Include="Views\OrderTours\Edit.cshtml" />
-    <Content Include="Views\OrderTours\Index.cshtml" />
+    <Content Include="Views\OrderTours\OrderTour.cshtml" />
+    <Content Include="Views\OrderTours\CompleteOrder.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
