--- a/TourManagement.Presentation/TourManagement.Presentation.csproj
+++ b/TourManagement.Presentation/TourManagement.Presentation.csproj
@@ -150,6 +150,7 @@
     <Compile Include="Areas\Admin\Controllers\HotelsManagementController.cs" />
     <Compile Include="Areas\Admin\Controllers\ToursManagementController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\HotelsController.cs" />
     <Compile Include="Controllers\OrderToursController.cs" />
     <Compile Include="Controllers\ToursController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
@@ -165,7 +166,10 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\hotelcss\hotel.css" />
     <Content Include="Content\images\baidinh1.jpg" />
+    <Content Include="Content\images\calendar.svg" />
+    <Content Include="Content\images\content.svg" />
     <Content Include="Content\images\dalat.png" />
     <Content Include="Content\images\halong1.jpg" />
     <Content Include="Content\images\hanquoc1.jpg" />
@@ -181,6 +185,7 @@
     <Content Include="Content\images\hotels\saigon1.jpg" />
     <Content Include="Content\images\hotels\sala1.jpg" />
     <Content Include="Content\images\hotels\vungtau1.jpg" />
+    <Content Include="Content\images\info.svg" />
     <Content Include="Content\images\logo1.PNG" />
     <Content Include="Content\images\meo.jpg" />
     <Content Include="Content\images\nhat1.jpg" />
@@ -349,7 +354,6 @@
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Shared\TourOverView.cshtml" />
     <Content Include="Views\Tours\Details.cshtml" />
-    <Content Include="Views\Tours\Index.cshtml" />
     <Content Include="Views\Tours\GetByCategory.cshtml" />
     <Content Include="Views\Users\Register.cshtml" />
     <Content Include="Views\Users\Login.cshtml" />
@@ -359,6 +363,11 @@
     <Content Include="Views\Home\SearchTour.cshtml" />
     <Content Include="Views\OrderTours\OrderTour.cshtml" />
     <Content Include="Views\OrderTours\CompleteOrder.cshtml" />
+    <Content Include="Views\Tours\TourContain.cshtml" />
+    <Content Include="Views\OrderTours\GetOrderTour.cshtml" />
+    <Content Include="Views\Hotels\Details.cshtml" />
+    <Content Include="Views\Hotels\Index.cshtml" />
+    <Content Include="Views\Shared\HotelOverView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
