go to area admin

--- a/TourManagement.Presentation/TourManagement.Presentation.csproj
+++ b/TourManagement.Presentation/TourManagement.Presentation.csproj
@@ -294,6 +294,7 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap.min.css.map" />
     <Content Include="Areas\Admin\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\Admin\Views\EmployeesManagement\Search.cshtml" />
     <None Include="Scripts\jquery-3.6.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.6.0.js" />
     <Content Include="Scripts\jquery-3.6.0.min.js" />
