complte create tour

--- a/TourManagement.Business/TourManagement.Business.csproj
+++ b/TourManagement.Business/TourManagement.Business.csproj
@@ -59,6 +59,7 @@
     <Compile Include="IServices\IHotelRepository.cs" />
     <Compile Include="IServices\IOrderTourDetailRepository.cs" />
     <Compile Include="IServices\IOrderTourRepository.cs" />
+    <Compile Include="IServices\ITourDestinationRepository.cs" />
     <Compile Include="IServices\ITourRepository.cs" />
     <Compile Include="IServices\IUserRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -68,6 +69,7 @@
     <Compile Include="Services\HotelRepository.cs" />
     <Compile Include="Services\OrderTourDetailRepository.cs" />
     <Compile Include="Services\OrderTourRepository.cs" />
+    <Compile Include="Services\TourDestinationRepository.cs" />
     <Compile Include="Services\TourRepository.cs" />
     <Compile Include="Services\UserRepository.cs" />
   </ItemGroup>
