--- a/TourManagement.Presentation/TourManagement.Presentation.csproj
+++ b/TourManagement.Presentation/TourManagement.Presentation.csproj
@@ -162,10 +162,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Areas\Admin\assets\AT-pro-black.png" />
-    <Content Include="Areas\Admin\assets\AT-pro-logo.png" />
-    <Content Include="Areas\Admin\assets\AT-pro-white.png" />
-    <Content Include="Areas\Admin\assets\tuat.jpg" />
     <Content Include="Areas\Admin\Css\fontawesome-free\css\all.css" />
     <Content Include="Areas\Admin\Css\fontawesome-free\css\all.min.css" />
     <Content Include="Areas\Admin\Css\fontawesome-free\css\brands.css" />
@@ -194,6 +190,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\images\bills.svg" />
     <Content Include="Content\images\calendar.svg" />
+    <Content Include="Content\images\check-list.svg" />
     <Content Include="Content\images\chungnhan1.jpg" />
     <Content Include="Content\images\chungnhan2.jpg" />
     <Content Include="Content\images\clock.svg" />
@@ -448,6 +445,9 @@
     <Content Include="Areas\Admin\Views\HomeManagement\Index.cshtml" />
     <Content Include="Areas\Admin\Views\ToursManagement\CheckTour.cshtml" />
     <Content Include="Areas\Admin\Views\OrderToursManagement\GetOrdersTour.cshtml" />
+    <Content Include="Areas\Admin\Views\OrderToursManagement\Orders.cshtml" />
+    <Content Include="Areas\Admin\Views\OrderToursManagement\GetOrders.cshtml" />
+    <Content Include="Areas\Admin\Views\OrderToursManagement\GetInfor.cshtml" />
     <None Include="Scripts\jquery-3.6.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.6.0.js" />
     <Content Include="Scripts\jquery-3.6.0.min.js" />
