--- a/TourManagement.Presentation/TourManagement.Presentation.csproj
+++ b/TourManagement.Presentation/TourManagement.Presentation.csproj
@@ -191,6 +191,7 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\images\beach.svg" />
     <Content Include="Content\images\bills.svg" />
     <Content Include="Content\images\calendar.svg" />
     <Content Include="Content\images\check-list.svg" />
@@ -243,6 +244,7 @@
     <Content Include="Content\images\phone-call.svg" />
     <Content Include="Content\images\star.svg" />
     <Content Include="Content\images\starnone.svg" />
+    <Content Include="Content\images\telephone.svg" />
     <Content Include="Content\images\tours\baidinh1.jpg" />
     <Content Include="Content\images\tours\baidinh2.jpg" />
     <Content Include="Content\images\tours\baidinh3.jpg" />
