--- a/TourManagement.Presentation/bin/TourManagement.Presentation.dll.config
+++ b/TourManagement.Presentation/bin/TourManagement.Presentation.dll.config
@@ -9,7 +9,7 @@
 		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
 	</configSections>
 	<connectionStrings>
-		<add name="TourManagementContext" connectionString="metadata=res://*/DBContext.TourManagement.csdl|res://*/DBContext.TourManagement.ssdl|res://*/DBContext.TourManagement.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NGUYENDINHHUY\SQLEXPRESS;initial catalog=TourManagement;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<add name="TourManagementContext" connectionString="metadata=res://*/DBContext.TourManagement.csdl|res://*/DBContext.TourManagement.ssdl|res://*/DBContext.TourManagement.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-HUYNGUY;initial catalog=TourManagement;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
 	<appSettings>
 		<add key="webpages:Version" value="3.0.0.0" />
